--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link href="styles.css" rel="stylesheet" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
-			rel="stylesheet"
-		/>
-		<script src="script.js" defer></script>
-		<title>Sandbox</title>
+		<title>Disney Clone</title>
+		
+		<link href="styles.css" rel="stylesheet" >
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<div class="navbar">
+			<img src="images/logo.png" class="brand-logo" alt="" />
+			<ul class="nav-links">
+				<li class="nav-items"><a href="#">TV</a></li>
+				<li class="nav-items"><a href="#">Movies</a></li>
+				<li class="nav-items"><a href="#">Sports</a></li>
+				<li class="nav-items"><a href="#">Premium</a></li>
+	</body>
 </html>
